--- a/index.html
+++ b/index.html
@@ -9,16 +9,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
         integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="css/style.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <form class="js-form">
-        <input class="js-newTask">
-        <button>Dodaj zadanie</button>        
-    </form>
+<body class="body">
 
-    <ul class="js-tasks"></ul>
+    <header class="header">
+        <h1>Lista zadań</h1>
+    </header>
+    <section class="section">
+        <h2 class="section__header">Dodaj nowe zadanie</h2>
+        <form class="form js-form">
+            <input>
+            <button class="form__bottom">Dodaj zadanie</button>
+        </form>
+    </section>
+
+    <section class="section">
+        <div>
+            <h3 class="section__header">Lista zadań</h3>
+        </div>
+        <ul class="taskList js-tasks">
+        </ul>
+    </section>
 
 </body>
 
