--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/form.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -22,8 +23,8 @@
     <section class="section">
         <h2 class="section__header">Dodaj nowe zadanie</h2>
         <form class="form js-form">
-            <input>
-            <button class="form__bottom">Dodaj zadanie</button>
+            <input class="form__input js-newTask" placeholder="Co jest do zrobienia?" autofocus required>
+            <button class="form__button">Dodaj zadanie</button>
         </form>
     </section>
 
